refactor: S3 이미지 경로를 전체 URL로 변환하여 전달하기 위한  dto 및 service 재구조화